syntax = "proto3";

package module_info;

service ModuleInfo {
  rpc register (ModuleInfoReq) returns (ModuleInfoResp) {}
}

enum ClientType {
  GRPC_TYPE = 0;
  PIPE_TYPE = 1;
  WINDOWS_NAMED_PIPE_TYPE = 2;
}

message ModuleInfoReq {
  string name = 1;
  ClientType client_type = 2;
  repeated string addr = 3;
  repeated string default_instruct = 4;
}

message ModuleInfoResp {
  bool success = 1;
}